force-app/main/default/objects/Trigger_Activation__c/Trigger_Activation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Trigger Activation</label>
</CustomObject>