force-app/main/default/objects/Trigger_Activation__c/fields/Case_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Case_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Case Trigger</label>
    <type>Checkbox</type>
</CustomField>