force-app/main/default/objects/Trigger_Activation__c/fields/Compensation_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Compensation Trigger</label>
    <type>Checkbox</type>
</CustomField>