force-app/main/default/objects/Trigger_Activation__c/fields/Crew_List_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Crew_List_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Crew List Trigger</label>
    <type>Checkbox</type>
</CustomField>