force-app/main/default/objects/Trigger_Activation__c/fields/CTI_Trigger__c.field-meta.xml
<CustomField>
    <fullName>CTI_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CTI Trigger</label>
    <type>Checkbox</type>
</CustomField>