force-app/main/default/objects/Trigger_Activation__c/fields/Email_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Email_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Email Trigger</label>
    <type>Checkbox</type>
</CustomField>