force-app/main/default/objects/Trigger_Activation__c/fields/Flight_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Flight_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Flight Trigger</label>
    <type>Checkbox</type>
</CustomField>