force-app/main/default/objects/Trigger_Activation__c/fields/Job_Queue_Scheduler__c.field-meta.xml
<CustomField>
    <fullName>Job_Queue_Scheduler__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Job Queue Scheduler</label>
    <type>Checkbox</type>
</CustomField>