force-app/main/default/objects/Trigger_Activation__c/fields/Job_Queue_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Job_Queue_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Job Queue Trigger</label>
    <type>Checkbox</type>
</CustomField>