force-app/main/default/objects/Trigger_Activation__c/fields/Passenger_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Passenger Trigger</label>
    <type>Checkbox</type>
</CustomField>