force-app/main/default/objects/Trigger_Activation__c/fields/Task_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Task_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Task Trigger</label>
    <type>Checkbox</type>
</CustomField>