force-app/main/default/objects/Trigger_Activation__c/fields/TempPassenger_Trigger__c.field-meta.xml
<CustomField>
    <fullName>TempPassenger_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>TempPassenger Trigger</label>
    <type>Checkbox</type>
</CustomField>